# SteamRomSync

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  RomM API - Swagger UI.html  discovery.py  install.sh  main.py  manager_ui.py  notifications.py  requirements.txt  romm_client.py  setup_ui.py  steamromsync-update.service  steamromsync-update.timer  steamromsync.service  sync_manager.py  uninstall.sh  update.sh  watcher.py
src/: client.rs  discovery.rs  main.rs  manager.rs  notifications.rs  watcher.rs
