[package]
name = "steam-rom-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
dotenvy = "0.15"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
subprocess = "0.2" # For notify-send
walkdir = "2.4"

# UI - considering egui for Steam Deck compatibility
eframe = "0.24"
egui = "0.24"
